--- a/views/login.ejs
+++ b/views/login.ejs
@@ -4,32 +4,32 @@
   <head>
       <% include partials/head %>
   </head>
-  <body class="container">
-    <div id="form">
-      <p>Please login to your account</p>
+  <body class="container-fluid">
+    <div class="form-control">
+      <h1>Log In TA MERE LA PUTE</h1>
       <hr/>
 
-      <p style="color: red"><%= notFoundErr === "" ? "" : notFoundErr %></p>
-      <p style="color: red"><%= pwdErr === "" ? "" : pwdErr %></p>
+      <p><%= notFoundErr === "" ? "" : notFoundErr %></p>
+      <p><%= pwdErr === "" ? "" : pwdErr %></p>
 
       <form action="/login" method="post">
 
-        <div class="form-group">
-          <label for="form_username">Username</label>
+        <div class="form-control">
+          <label for="form_username">Username : </label>
           <input id="form_username" type="text" name="username" />
         </div>
 
-        <div class="form-group">
-          <label for="form_password">Password</label>
+        <div class="form-control">
+          <label for="form_password">Password : </label>
           <input id="form_password" type="password" name="password" />
         </div>
         
-        <button class="btn btn-primary btn-block" type="submit" value="Submit">Connect</button>
+        <button class="btn btn-primary" type="submit" value="Submit">Submit</button>
       </form>
 
       <hr/>
-      <button class="btn btn-success btn-block" type="submit" href="/signup" onClick='document.location.href="/signup"'>
-        Create an account
+      <button class="btn btn-primary" type="submit" href="/signup" onClick='document.location.href="/signup"'>
+        Sign Up
       </button>
 
     </div>
