--- a/views/login.ejs
+++ b/views/login.ejs
@@ -6,7 +6,7 @@
   </head>
   <body class="container-fluid">
     <div class="form-control">
-      <h1>Log In TA MERE LA PUTE</h1>
+      <h1>Log In</h1>
       <hr/>
 
       <p><%= notFoundErr === "" ? "" : notFoundErr %></p>
