--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -5,37 +5,32 @@
       <% include partials/head %>
   </head>
   <body class="container">
-    <div id="form">
-      <p>Please fill in this form below in order to create an account</p>
+    <div id="form-control">
+      <h1>Sign Up </h1>
       <hr/>
-      <p style="color: red"><%= existErr === "" ? "" : existErr %></p>
-      <p style="color: red"><%= emptyErr === "" ? "" : emptyErr %></p>
+      <p><%= existErr === "" ? "" : existErr %></p>
+      <p><%= emptyErr === "" ? "" : emptyErr %></p>
 
       <form action="/signup" method="post">
 
-        <div class="form-group">
-          <label for="form_username">Username</label>
+        <div class="form-control">
+          <label for="form_username">Username : </label>
           <input id="form_username" type="text" name="username" />
         </div>
 
-        <div class="form-group">
-          <label for="form_email">Email</label>
+        <div class="form-control">
+          <label for="form_email">Email : </label>
           <input id="form_email" type="email" name="email" />
         </div>
 
-        <div class="form-group">
-          <label for="form_password">Password</label>
+        <div class="form-control">
+          <label for="form_password">Password : </label>
           <input id="form_password" type="password" name="password" />
         </div>
         
-        <button class="btn btn-primary btn-block" type="submit" value="Submit">Sign up</button>
+        <button class="btn btn-primary" type="submit" value="Submit">Sign up</button>
       </form>
-
       <hr/>
-      <button class="btn btn-success btn-block" type="submit" href="/login" onClick='document.location.href="/login"'>
-        Go back to the login page
-      </button>
-
     </div>
   </body>
 </html>
