--- a/views/index.ejs
+++ b/views/index.ejs
@@ -3,15 +3,15 @@
   <head>
       <% include partials/head %>
   </head>
-  <body class="container" style="margin-bottom: 100px">
-    <div class="col-md-6 col-md-offset-3">
-      <h1>Hello <%=name %></h1>
+  <body class="container-fluid" style="margin-bottom: 100px">
+    <div class="col-md-8 col-md-offset-5">
+      <h1>Welcome <%=name %></h1>
       <br/>
-      <button class="btn btn-danger" href="/logout" onClick='document.location.href="/logout"'>
+      <button class="btn btn-primary" href="/logout" onClick='document.location.href="/logout"'>
         Logout
       </button>
       <br/><br/><br/>
-      <h3>Your metrics : </h3>
+      <h2>Here are your metrics :</h2>
       <div id="metrics"></div>
     </div>
     <ul>
@@ -26,43 +26,41 @@
       </script>
     </ul>
 
-    <h5>What do you want to do ?</h5>
-
     <form action="/convert" method="post">
-      <div class="form-group">
+      <div class="form-control">
         <label for="form_datetime">Datetime : </label>
-        <input type="datetime-local" id="form_timestamp" name="dateTime" value="2019-12-01T00:00" min="1970-01-01T00:00" max="2100-12-31T23:59">
+        <input type="datetime-local" id="form_timestamp" name="dateTime" value="2019-12-24T00:00" min="1970-01-01T00:00" max="2100-12-31T23:59">
         <p><%= datetime === "" ? "" : datetime %></p>
       </div>
-      <button class="btn btn-primary " type="submit" value="Submit">Convert datetime into timestamp</button>
+      <button class="btn btn-primary" type="submit" value="Submit">Convert datetime into timestamp</button>
     </form>
 
     <br/>
     <form action="/convert2" method="post">
-      <div class="form-group">
+      <div class="form-control">
         <label for="form_timestamp">Timestamp : </label>
-        <input id="form_timestamp" type="number" placeholder="Enter a positif number" name="timestamp" min="0"/>
+        <input id="form_timestamp" type="number" name="timestamp" min="0"/>
         <p><%= timestamp === "" ? "" : timestamp %></p>
       </div>
-      <button class="btn btn-primary " type="submit" value="Submit">Convert timestamp into datetime</button>
+      <button class="btn btn-primary" type="submit" value="Submit">Convert timestamp into datetime</button>
     </form>
 
     <br/>
     <form action="/add" method="post">
-      <div class="form-group">
+      <div class="form-control">
         <label for="form_timestamp">Timestamp : </label>
-        <input id="form_timestamp" type="number" placeholder="Enter a positif number" name="timestamp" min="0"/>
+        <input id="form_timestamp" type="number" name="timestamp" min="0"/>
         <label for="form_timestamp">, Value: </label>
-        <input id="form_timestamp" type="number" placeholder="Enter a number" name="value" />
-        <button class="btn btn-success " type="submit" value="Submit">Add/update a metric</button>
+        <input id="form_timestamp" type="number" name="value" />
+        <button class="btn btn-primary" type="submit" value="Submit">Add</button>
       </div>
     </form>
 
     <form action="/delete" method="post">
-      <div class="form-group">
+      <div class="form-control">
         <label for="form_timestamp">Timestamp : </label>
-        <input id="form_timestamp" type="number" placeholder="Enter a positif number" name="timestamp" min="0"/>
-        <button class="btn btn-success" type="submit" value="Submit">Delete a metric</button>
+        <input id="form_timestamp" type="number" name="timestamp" min="0"/>
+        <button class="btn btn-primary" type="submit" value="Submit">Delete</button>
       </div>
     </form>
 
