--- a/views/login.ejs
+++ b/views/login.ejs
@@ -4,7 +4,7 @@
   <head>
       <% include partials/head %>
   </head>
-  <body class="container-fluid">
+  <body class="container">
     <div class="form-control">
       <h1>Log In</h1>
       <hr/>
