--- a/views/login.ejs
+++ b/views/login.ejs
@@ -5,21 +5,21 @@
       <% include partials/head %>
   </head>
   <body class="container">
-    <div class="form-control">
+    <div>
       <h1>Log In</h1>
       <hr/>
 
       <p><%= notFoundErr === "" ? "" : notFoundErr %></p>
       <p><%= pwdErr === "" ? "" : pwdErr %></p>
 
-      <form action="/login" method="post">
+      <form class="text-justify" action="/login" method="post">
 
-        <div class="form-control">
+        <div>
           <label for="form_username">Username : </label>
           <input id="form_username" type="text" name="username" />
         </div>
 
-        <div class="form-control">
+        <div>
           <label for="form_password">Password : </label>
           <input id="form_password" type="password" name="password" />
         </div>
