--- a/views/home.ejs
+++ b/views/home.ejs
@@ -5,11 +5,11 @@
   </head>
   <body class="container">
       
-    <div class="col-md-6 col-md-offset-3">
+    <div class="col-md-6 col-md-offset-5">
       <h1>Welcome to ECE metrics</h1>
     </div>
     <div>
-        <button class="btn btn-success" href="/login" onClick='document.location.href="/login"'>
+        <button class="btn btn-primary" href="/login" onClick='document.location.href="/login"'>
             Login
           </button>
           <button class="btn btn-primary" href="/signup" onClick='document.location.href="/signup"'>
