--- a/views/index.ejs
+++ b/views/index.ejs
@@ -67,7 +67,21 @@
     <br/>
     <br/>
 
-    <div id="MyChart"></div>
+    <div id="MyChart">
+      d3.json('data/fake_users1.json', function(data) {
+        data = MG.convert.date(data, 'date');
+        MG.data_graphic({
+            title: "Line Chart",
+            description: "This is a simple line chart. You can remove the area portion by adding area: false to the arguments list.",
+            data: data,
+            width: 600,
+            height: 200,
+            right: 40,
+            target: document.getElementById('fake_users1'),
+            x_accessor: 'date',
+            y_accessor: 'value'
+        });
+    });
     
     <script>
       $.getJSON("/metrics/<%= name %>", {}, (data) => {
@@ -130,6 +144,7 @@
       });
     </script>
 
+</div>
 
 
   </body>
