--- a/views/error.ejs
+++ b/views/error.ejs
@@ -5,9 +5,12 @@
   </head>
 
   <body>
-    <h1 text-align="center" style="color:red; text-align: center; margin-top: 150px">
-      ERROR 404 ! PAGE NOT FOUND !
+    <h1 text-align="center" style="color:green; text-align: center; margin-top: 100px">
+      ERROR 404 : PAGE NOT FOUND :(
     </h1>
+    <h2 text-align="center" style="color:green; text-align: center; margin-top: 100px">
+     Are you sure you have the right url ? If you are lost click <a href="http://localhost:8080">Here</a>
+    </h2>
   </body>
 
 </html>
