--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -3,7 +3,13 @@
 
 <link rel="stylesheet" href="/css/bootstrap.min.css">
 <style>
-    body    { padding-top:50px; }
+    body    { padding-top:50px; 
+
+    color : whitesmoke;
+   
+    background-image: url('http://www.nlightntech.com/images/pitchmsg4.jpg');
+    
+    }
 </style>
 
 <script src="/js/jquery.min.js"></script>
